# compile-times-too-long

./: Cargo.toml
src/: filed.rs  generated.template  main.rs
